// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core.public.addNodes Adds Single Node 1`] = `
Object {
  "edges": Object {},
  "nodes": Object {
    "1": Object {
      "nodeData": Object {
        "some": "data",
      },
      "nodeID": 1,
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`core.public.addNodes Adds Two Nodes 1`] = `
Object {
  "edges": Object {},
  "nodes": Object {
    "1": Object {
      "nodeData": Object {
        "some": "data",
      },
      "nodeID": 1,
      "possibleTargets": Array [],
    },
    "2": Object {
      "nodeData": Object {
        "some": "otherData",
      },
      "nodeID": 2,
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`core.public.addNodes Fails silently with no arguments 1`] = `
Object {
  "edges": Object {},
  "nodes": Object {
    "1": Object {
      "nodeData": Object {
        "some": "data",
      },
      "nodeID": 1,
      "possibleTargets": Array [],
    },
    "2": Object {
      "nodeData": Object {
        "some": "otherData",
      },
      "nodeID": 2,
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`core.public.addNodes exports 1`] = `[Function]`;
